# runns

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  Makefile.in  README.md  build-net  build-net.sh  clean-net  clean-net.sh  client.c  config.mk.in  configure.ac  librunns.c  myuid  queue.c  queue.h  runns.c  runns.h  runnsctl.c
img/: runns-logo.xcf
nswizard/: nswizard_lib.c
tests/: Makefile  prepare_env.sh  queue.c  runnsctl.c  test_queue.c  test_runnsctl.c
